Fix: figcaption font on kinlochewe now fits in text box on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -434,13 +434,9 @@ button[type="submit"] {
     }
 }
 
-
-
-
-
-
-
-
-
-
-
+/* ----------------------------------------change to text size on figcaption for single words. multiple word phrases will wrap */
+@media (max-width: 370px) {
+    .general-sub {
+        font-size: 19px;
+    }
+}
